--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,14 @@
 <section>
-        <div class="row StyleRow">
-            <div class="col-md-4 mx-auto">
+    <div class="row StyleRow">
+        <div class="col-md-4 mx-auto">
                 <div class="card">
                     <div class="card-body">
                         <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">User Name</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -17,10 +22,10 @@
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
                             </div>
-                                <button type="submit" class="btn btn-dark">Sign in</button>    
+                                <button type="submit" class="btn btn-dark">Sign up</button>    
                         </form>
                     </div>
                 </div>
-            </div>
         </div>
+    </div>
 </section>
