--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
-.Pantalla{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-}
+    .app-component-conatiner {
+        width: 100%;
+        height: 100%;
+        background-color: blueviolet;
+    }
