--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,30 @@
-.StyleRow{
-  padding-top:5%;
-  display: flex;
+.login-component-container {
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../../../assets/barber2.jpg');
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+}
+
+.title-container {
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 60px;
+}
+
+.form-container {
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
