--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,5 @@
-body, html{
+body,
+html {
     width: 100%;
     height: 100%;
-}
-.main{
-    width: 100%;
-    height: 100%;
-    background-image: url('assets/barber2.jpg');
-    background-size:cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover; 
 }
