--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -28,3 +28,20 @@
     justify-content: center;
     align-items: center;
 }
+
+.card {
+    width: 40%;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.button-registrar {
+    background-color: white;
+    border: none;
+    color: rgb(148, 102, 179);
+    text-decoration: underline;
+}
