--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,19 +7,19 @@
             <div class="card-body">
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label for="exampleInputEmail1">Correo*</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
+                        <label for="exampleInputPassword1">Contraseña*</label>
                         <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <div class="buttons-container">
+                        <button type="submit" class="btn btn-dark">ingresar</button>
                     </div>
-                    <button type="submit" class="btn btn-dark">Sign in</button>
+                    <div class="buttons-container">
+                        <button class="button-registrar">Registrareme</button>
+                    </div>
                 </form>
             </div>
         </div>
