--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,20 +5,20 @@
     <div class="form-container">
         <div class="card">
             <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Correo*</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+                    <div class=" form-group ">
+                        <label for="email">Correo*</label>
+                        <input type="email" class="form-control" formControlName="email" aria-describedby="emailHelp ">
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Contraseña*</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    <div class="form-group ">
+                        <label for="password">Contraseña*</label>
+                        <input id="password" type="password" class="form-control" formControlName="password">
                     </div>
-                    <div class="buttons-container">
-                        <button type="submit" class="btn btn-dark">ingresar</button>
+                    <div class="buttons-container ">
+                        <button type="submit " class="btn btn-dark ">ingresar</button>
                     </div>
-                    <div class="buttons-container">
-                        <button class="button-registrar">Registrareme</button>
+                    <div class="buttons-container ">
+                        <button class="button-registrar ">Registrareme</button>
                     </div>
                 </form>
             </div>
