--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,4 +1,47 @@
-.StyleRow {
-    padding-top: 5%;
+.login-component-container {
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../../../assets/barber2.jpg');
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+}
+
+.title-container {
+    height: 20%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 60px;
+}
+
+.form-container {
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 40%;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.button-registrar {
+    background-color: white;
+    border: none;
+    color: rgb(148, 102, 179);
+    text-decoration: underline;
 }
