--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,31 +1,35 @@
-<section>
-    <div class="row StyleRow">
-        <div class="col-md-4 mx-auto">
-                <div class="card">
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">User Name</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                                <button type="submit" class="btn btn-dark">Sign up</button>    
-                        </form>
+<div class="login-component-container">
+    <div class="title-container">
+        <h1 class="title">Registrate</h1>
+    </div>
+    <div class="form-container">
+        <div class="card">
+            <div class="card-body">
+                <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+                    <div class="form-group ">
+                        <label for="fullname">Nombre completo*</label>
+                        <input id="fullname" type="text" class="form-control" formControlName="fullname">
                     </div>
-                </div>
+                    <div class=" form-group ">
+                        <label for="email">Correo*</label>
+                        <input type="email" class="form-control" formControlName="email" aria-describedby="emailHelp ">
+                    </div>
+                    <div class="form-group ">
+                        <label for="password">Contraseña*</label>
+                        <input id="password" type="password" class="form-control" formControlName="password">
+                    </div>      
+                    <div class="form-group ">
+                        <label for="address">Direccion</label>
+                        <input id="address" type="text" class="form-control" formControlName="address">
+                    </div>
+                    <div class="buttons-container ">
+                        <button type="submit " class="btn btn-dark ">Registrarme</button>
+                    </div>
+                    <div class="buttons-container ">
+                        <button class="button-registrar ">Ya estas registrado? Ingresa aqui</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</section>
+</div>
