Mejoras al componente register, se agrega campo validar contraseña

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -17,16 +17,20 @@
                     <div class="form-group ">
                         <label for="password">Contraseña*</label>
                         <input id="password" type="password" class="form-control" formControlName="password">
-                    </div>      
+                    </div>
+                    <div class="form-group ">
+                        <label for="validatePassword">Validar contraseña*</label>
+                        <input id="validatePassword" type="password" class="form-control" formControlName="validatePassword">
+                    </div>                  
                     <div class="form-group ">
                         <label for="address">Direccion</label>
                         <input id="address" type="text" class="form-control" formControlName="address">
                     </div>
                     <div class="buttons-container ">
-                        <button type="submit " class="btn btn-dark ">Registrarme</button>
+                        <button  type="submit " class="btn btn-dark ">Registrarme</button>
                     </div>
                     <div class="buttons-container ">
-                        <button class="button-registrar ">Ya estas registrado? Ingresa aqui</button>
+                        <button  class="button-registrar ">Ya estas registrado? Ingresa aqui</button>
                     </div>
                 </form>
             </div>
