--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
         <h1 class="title">Inicia sesión y pide tu cita</h1>
     </div>
     <div class="form-container">
-        <div class="card">
+        <div class="card col-md-4">
             <div class="card-body">
                 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
                     <div class=" form-group ">
@@ -15,12 +15,12 @@
                         <input id="password" type="password" class="form-control" formControlName="password">
                     </div>
                     <div class="buttons-container ">
-                        <button type="submit " class="btn btn-dark ">ingresar</button>
-                    </div>
-                    <div class="buttons-container ">
-                        <button class="button-registrar ">Registrareme</button>
-                    </div>
+                        <button type="submit " class="btn-block btn-dark ">Ingresar</button>
+                    </div>                    
                 </form>
+                <div class="buttons-container ">
+                    <button (click)="OnRedirect()" class="button-registrar">Registrarte</button>
+                </div>
             </div>
         </div>
     </div>
