Implementación de navbar en login y registro

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,34 +1,35 @@
 <!-- Start header -->
 <header class="top-navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="">
-                <img src="../../../assets/logo.png" alt="" />
-            </a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbars-rs-food" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-bar top-bar"></span>
-                <span class="icon-bar middle-bar"></span>
-                <span class="icon-bar bottom-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbars-rs-food">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="/">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/register">Registrate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Inicia sesión</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container">
+			<a class="navbar-brand" href="">
+				<img src="../../../assets/logo.png" alt="" />
+			</a>
+			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbars-rs-food" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="icon-bar top-bar"></span>
+				<span class="icon-bar middle-bar"></span>
+				<span class="icon-bar bottom-bar"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbars-rs-food">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active"><a class="nav-link" href="/">Inicio</a></li>
+					<li class="nav-item"><a class="nav-link" href="">Servicios</a></li>
+					<li class="nav-item"><a class="nav-link" href="/register">Registrate</a></li>
+					<li class="nav-item"><a class="nav-link" href="/login">Inicia sesión</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 </header>
 <!-- End header -->
+
 <!-- Start presentacion-->
 <div id="home" class="parallax">
     <div id="full-width" class="owl-carousel owl-theme home-hero">
         <div class="text-center item slider-01 display-table overlay">
             <div class="display-table-cell">
                 <div class="big-tagline text-center">
-                    <h2><strong>Barber Shop</strong><br>
+                    <h2><strong>Style Barber</strong><br>
                     Medellin
                     </h2>
                     <p class="lead">Ahora puedes agendar tu cita a solo un click !</p>
@@ -38,7 +39,8 @@
     </div>
 </div>
 <!-- End presentacion-->
-	<!-- Start Page Content -->
+
+<!-- Start Page Content -->
 	<div id="page-content-wrapper">	
         <!-- Start Sobre la empresa -->		
 		<div class="section wb">            
@@ -48,7 +50,7 @@
 					<div class="col-md-6 text-left">
 						<div class="message-box">
 							<h4>Acerca de</h4>
-							<h2>Bienvenido a Barber shop</h2>
+							<h2>Bienvenido a Style barber</h2>
 							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
 							<p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
 							<a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
@@ -343,19 +345,22 @@
 			</div><!-- end container -->
         </div>
         <!-- End Testimonios -->
-
-		<div class="copyrights">
-			<div class="container">
-				<div class="footer-distributed">
-					<div class="footer-left">
-						<p class="footer-links">
-							<a href="#">Home</a>
-							<a href="#">Contact</a>
-						</p>
-						<p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-					</div>
-				</div>
-			</div><!-- end container -->
-		</div><!-- end copyrights -->
+		
 	</div>
 <!-- End Page Content -->
+
+<!-- Start copyrights -->
+	<div class="copyrights">
+		<div class="container">
+			<div class="footer-distributed">
+				<div class="footer-left">
+					<p class="footer-links">
+						<a href="#">Home</a>
+						<a href="#">Contact</a>
+					</p>
+					<p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
+				</div>
+			</div>
+		</div><!-- end container -->
+	</div>
+<!-- End copyrights -->
