--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,8 @@
                     <li class="nav-item active"><a class="nav-link" href="/">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="/register">Registrate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Inicia sesión</a></li>
+					<li class="nav-item"><a class="nav-link" href="/login">Inicia sesión</a></li>
+					<li class="nav-item"><a class="nav-link" href="/create-barber">Crear Usuarios</a></li>
                 </ul>
             </div>
         </div>
