--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -14,7 +14,7 @@
 <div id="home" class="parallax">
     <div id="full-width" class="owl-carousel owl-theme home-hero">
         <div class="text-center item slider-01 display-table overlay">
-            <div class="display-table-cell">
+            <div class="display-table-cell" style="padding-top: 5px;padding-bottom: 5px;">
                 <div class="form-container">
                     <div class="card col-md-6">
                         <div class="card-body">
