--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,10 +12,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbars-rs-food">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="/">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/register">Registrate</a></li>
-					<li class="nav-item"><a class="nav-link" href="/login">Inicia sesión</a></li>
+                    <li class="nav-item active" *ngIf="currentUser()" ><a class="nav-link" href="/">Inicio</a></li>
+                    <li class="nav-item" *ngIf="currentUser()"><a class="nav-link" href="">Servicios</a></li>
+                    <li class="nav-item" *ngIf="!currentUser()"><a class="nav-link" href="/register">Registrate</a></li>
+					<li class="nav-item" *ngIf="!currentUser()"><a class="nav-link" href="/login">Inicia sesión</a></li>
 					<li class="nav-item"><a *ngIf="validateUserType()" class="nav-link" href="/create-barber">Crear Barbero</a></li>
                 </ul>
             </div>
