--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -19,7 +19,7 @@
                     <!--Para los clientes-->
                     <li class="nav-item"><a class="nav-link" href="/main">Historial de citas</a></li>
                     <!--Para todos los tipos de usuarios-->
-                    <li class="nav-item"><a class="nav-link" href="/">Salir 🏃‍♂</a></li>
+                    <li class="nav-item"><a class="nav-link" (click)="logout()">Salir 🏃‍♂</a></li>
 				</ul>
 			</div>
 		</div>
