--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
 <header class="top-navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<a class="navbar-brand" href="">
+			<a class="navbar-brand" href="/" *ngIf="!currentUser()">
+				<img src="../../../assets/logo.png" alt="" />
+            </a>
+            <a class="navbar-brand" *ngIf="currentUser()">
 				<img src="../../../assets/logo.png" alt="" />
 			</a>
 			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbars-rs-food" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,17 +23,17 @@
                     <!--Para todos los tipos de usuarios-->
                     <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="">Servicios</a></li>
                     <!--Para los clientes-->
-                    <li class="nav-item active"><a class="nav-link" href="/main">Reservas</a></li>
+                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/main">Reservas</a></li>
                     <!--Para los clientes-->
-                    <li class="nav-item active"><a class="nav-link" href="/main">Historial de citas</a></li>
+                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/main">Historial de citas</a></li>
                     <!--Para todos los tipos de usuarios-->
-                    <li class="nav-item active" ><a *ngIf="validateUserType()" class="nav-link" href="/create-barber">Crear Barbero</a></li>         
+                    <li class="nav-item active" *ngIf="validateUserType()"><a class="nav-link" href="/create-barber">Crear Barbero</a></li>         
                     <!--Para todos los tipos de usuarios-->
-                    <li class="nav-item active" ><a *ngIf="!currentUser()" class="nav-link" href="/register">Registrate</a></li>
+                    <li class="nav-item active" *ngIf="!currentUser()"><a class="nav-link" href="/register">Registrate</a></li>
                     <!--Para todos los tipos de usuarios-->
-                    <li class="nav-item active" ><a *ngIf="!currentUser()" class="nav-link" href="/login">Inicia sesión</a></li>
+                    <li class="nav-item active" *ngIf="!currentUser()"><a class="nav-link" href="/login">Inicia sesión</a></li>
                     <!--Para todos los tipos de usuarios-->
-                    <li class="nav-item active" ><a *ngIf="currentUser()" (click)="logout()" class="nav-link" href="/">Salir 🏃‍♂</a></li> 
+                    <li class="nav-item active" *ngIf="currentUser()"><a (click)="logout()" class="nav-link" href="/">Salir 🏃‍♂</a></li> 
 				</ul>
 			</div>
 		</div>
