--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,11 +1,34 @@
 <div id="home" class="parallax">
     <div id="full-width" class="owl-carousel owl-theme home-hero">
         <div class="text-center item slider-01 display-table overlay">
-            <div class="display-table-cell"></div>
+            <div class="display-table-cell">
+                <div class="form-container">
+                    <div class="card col-md-6">
+                        <div class="card-body">
+                            <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+                                <div class="form-group ">
+                                    <label for="nombres">Nombres*</label>
+                                    <input type="text" class="form-control" formControlName="nombres" aria-describedby="nombresHelp">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Correo*</label>
+                                    <input type="email" class="form-control" disabled formControlName="email" aria-describedby="emailHelp ">
+                                </div>
+                                <div class="form-group ">
+                                    <label for="password">Contraseña*</label>
+                                    <input id="password" type="password" class="form-control" formControlName="password">
+                                </div>
+                                <div class="buttons-container ">
+                                    <button type="submit " class="btn-block btn-dark ">Actualizar</button>
+                                </div>                    
+                            </form>
+                        </div>
+                    </div>
+                </div>               
+            </div>
         </div>
     </div>
 </div>
-
 <!-- Start copyrights -->
 <div class="copyrights">
     <div class="container">
