--- a/src/app/components/dating-history/dating-history.component.html
+++ b/src/app/components/dating-history/dating-history.component.html
@@ -7,32 +7,26 @@
                 <div class="form-container">
                     <div class="card col-md-10">
                         <div class="card-body">
-                            <p class="h1">Historial de citas</p>
+                            <h1 class="h1">Historial de citas</h1>
                             <table class="table table-dark">
-                                <thead >
-                                    <tr>
-                                        <th>#</th>
-                                        <th>idReserva</th>
-                                        <th>Descripcion</th>
-                                        <th>Cliente</th>
-                                        <th>Barbero</th>
-                                        <th>Cita</th>
-                                        <th>Estado</th>                                   
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr >
-                                        <th>{{dates._id}}</th>
-                                        <td>{{dates.idReserva}}</td>
-                                        <td>{{dates.description}}</td>
-                                        <td>{{dates.client}}</td>
-                                        <td>{{dates.barber}}</td>
-                                        <td>{{dates.date}}</td>
-                                        <td>{{dates.state}}</td>     
-                                    </tr>
-                                </tbody>
-                            </table>  
-                            <button (click)="clickaso()">button</button>                          
+                                <tr>
+                                    <th>idReserva</th>
+                                    <th>Descripcion</th>
+                                    <th>Cliente</th>
+                                    <th>Barbero</th>
+                                    <th>Cita</th>
+                                    <th>Estado</th>
+                                </tr>
+                                <tr *ngFor="let item of data" class="contenido">
+                                    <td>{{item.idReserva}}</td>
+                                    <td>{{item.description}}</td>
+                                    <td>{{item.client}}</td>
+                                    <td>{{item.barber}}</td>
+                                    <td>{{item.date}}</td>
+                                    <td>{{item.state}}</td>
+                                    <td><button class="boton" (click)="changeState(item)">Realizado</button></td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -42,7 +36,7 @@
 </div>
 <!-- End presentacion-->
 <!-- Start copyrights -->
-<div class="copyrights"> 
+<div class="copyrights">
     <div class="container">
         <div class="footer-distributed">
             <div class="footer-left">
@@ -53,6 +47,7 @@
                 <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
             </div>
         </div>
-    </div><!-- end container -->
+    </div>
+    <!-- end container -->
 </div>
 <!-- End copyrights -->
