--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -8,7 +8,7 @@
                             <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
                                 <div class="form-group ">
                                     <label for="nombres">Nombres*</label>
-                                    <input type="text" class="form-control" formControlName="nombres" aria-describedby="nombresHelp">
+                                    <input type="text" class="form-control" value="" formControlName="nombres" aria-describedby="nombresHelp">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Correo*</label>
