--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -296,7 +296,7 @@
 								</div>
 								<div class="desc">
 									<h3>Muy buen servicio!</h3>
-									<p class="lead">Chimba de visaje me hicieron.</p>
+									<p class="lead">.</p>
 								</div>
 								<!-- end testi-meta -->
 							</div>
