--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
                     <!--Para todos los tipos de usuarios-->
                     <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="">Servicios</a></li>
                     <!--Para los clientes-->
-                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/main">Reservas</a></li>
+                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/reserve">Crear Reservas</a></li>
                     <!--Para los clientes-->
-                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/dating-history">Historial de citas</a></li>
+                    <li class="nav-item active" *ngIf="validateUserTypeBarber()"><a class="nav-link" href="/dating-history">Historial de citas</a></li>
                     <!--Para todos los tipos de usuarios-->
                     <li class="nav-item active" *ngIf="validateUserType()"><a class="nav-link" href="/create-barber">Crear Barbero</a></li>         
                     <!--Para todos los tipos de usuarios-->
