--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -95,20 +95,10 @@
 								Afeitado
 							  </h4>
 							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 5</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 10</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 15</a>
-							  </div>
+								<h5>Precio x Afeitado.</h5>
+								<p></p>
+								<a href="#">$ 10.000</a>
+							  </div>							 
 							</div>
 						  </div>
 						</div>
@@ -121,19 +111,9 @@
 								Mascarillas faciales
 							  </h4>
 							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 5</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 10</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 15</a>
+								<h5>Precio x Mascarillas</h5>
+								<p></p>								
+								<a href="#">$ 15.000</a>
 							  </div>
 							</div>
 						  </div>
@@ -147,20 +127,10 @@
 								Cortes de cabello
 							  </h4>
 							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 5</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 10</a>
-							  </div>
-							  <div class="line-pricing">
-								<h5>Lorem ipsum dolor</h5>
-								<p>Donec eu diam ante. Nam non porta ipsum, nec tristique odio. Etiam vel libero non massa rutrum molestie non non ipsum.</p>
-								<a href="#">$ 15</a>
-							  </div>
+								<h5>Precio x Cortes de cabello</h5>
+								<p></p>							
+								<a href="#">$ 20.000</a>
+							  </div>							
 							</div>
 						  </div>
 						</div>
@@ -184,7 +154,7 @@
 						<div class="widget our-inner-taem clearfix">
 							<div class="t-top"></div>
 							<div class="hover-br">
-								<img src="../../../assets/uploads/barber_team_01.jpg" alt="" class="img-responsive">
+								<img src="../../../assets/Alejo palaciox.jpeg" alt="" class="img-responsive">
 								<div class="social-up-hover">
 									<div class="footer-social">
 										<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -196,8 +166,8 @@
 							</div>
 							<div class="team-box">
 								<div class="widget-title">
-									<h3>Soren Bo Bostian</h3>
-									<small>The Founder</small>
+									<h3>Alejandro Palaciox</h3>
+									<small>The Barber</small>
 								</div>
 								<!-- end title -->
 								<p>Lorem ipsum dolor.</p>
@@ -210,7 +180,7 @@
 						<div class="widget our-inner-taem clearfix">
 							<div class="t-top"></div>
 							<div class="hover-br">
-								<img src="../../../assets/uploads/barber_team_03.jpg" alt="" class="img-responsive">
+								<img src="../../../assets/Juan Agudelo 2.jpeg" alt="" class="img-responsive">
 								<div class="social-up-hover">
 									<div class="footer-social">
 										<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -222,7 +192,7 @@
 							</div>
 							<div class="team-box">
 								<div class="widget-title">
-									<h3>Bryan Saftler</h3>
+									<h3>Juan Pablo Agudelo</h3>
 									<small>The Barber</small>
 								</div>
 								<!-- end title -->
@@ -236,7 +206,7 @@
 						<div class="widget our-inner-taem clearfix">
 							<div class="t-top"></div>
 							<div class="hover-br">
-								<img src="../../../assets/uploads/barber_team_02.jpg" alt="" class="img-responsive">
+								<img src="../../../assets/Juanex 2.jpeg" alt="" class="img-responsive">
 								<div class="social-up-hover">
 									<div class="footer-social">
 										<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -248,7 +218,7 @@
 							</div>
 							<div class="team-box">
 								<div class="widget-title">
-									<h3>Matthew Bayliss</h3>
+									<h3>Juan Esteban Arias</h3>
 									<small>The Barber</small>
 								</div>
 								<!-- end title -->
@@ -278,7 +248,7 @@
 							<div class="testimonial clearfix">
 								<div class="testi-meta">
 									<i class="fa fa-quote-right"></i>
-									<img src="../../../assets/uploads/testi_01.png" alt="" class="img-responsive alignright">
+									<img src="../../../assets/Alejo palaciox.jpeg" alt="" class="img-responsive alignright">
 									<h4>Juan Pablo Agudelo <small>- Manager of Racer</small></h4>
 								</div>
 								<div class="desc">
@@ -291,12 +261,12 @@
 							<div class="testimonial clearfix">
 								<div class="testi-meta">
 									<i class="fa fa-quote-right"></i>
-									<img src="../../../assets/uploads/testi_02.png" alt="" class="img-responsive alignright">
-									<h4>Jacques Philips <small>- Designer</small></h4>
+									<img src="../../../assets/Juan Agudelo 2.jpeg" alt="" class="img-responsive alignright">
+									<h4>Juan Esteban Arias<small>- Designer</small></h4>
 								</div>
 								<div class="desc">
 									<h3>Muy buen servicio!</h3>
-									<p class="lead">.</p>
+									<p class="lead">El lugar es genial!.</p>
 								</div>
 								<!-- end testi-meta -->
 							</div>
@@ -304,12 +274,12 @@
 							<div class="testimonial clearfix">
 								<div class="testi-meta">
 									<i class="fa fa-quote-right"></i>
-									<img src="../../../assets/uploads/testi_03.png" alt="" class="img-responsive alignright">
-									<h4>Venanda Mercy <small>- Newyork City</small></h4>
+									<img src="../../../assets/Juanex 2.jpeg" alt="" class="img-responsive alignright">
+									<h4>Alejandro Palaciox<small>- Newyork City</small></h4>
 								</div>
 								<div class="desc">
 									<h3>Felicidades!</h3>
-									<p class="lead">Mela de baber.</p>
+									<p class="lead">Muy buena barberia.</p>
 								</div>
 								<!-- end testi-meta -->
 							</div>	
@@ -324,18 +294,3 @@
 	</div>
 <!-- End Page Content -->
 
-<!-- Start copyrights -->
-	<div class="copyrights">
-		<div class="container">
-			<div class="footer-distributed">
-				<div class="footer-left">
-					<p class="footer-links">
-						<a href="#">Home</a>
-						<a href="#">Contact</a>
-					</p>
-					<p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-				</div>
-			</div>
-		</div><!-- end container -->
-	</div>
-<!-- End copyrights -->
