--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,6 +6,7 @@
                 <div class="form-container">
                     <div class="card col-md-6">
                         <div class="card-body">
+                            <p class="title">Ingresar</p>
                             <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
                                 <div class=" form-group ">
                                     <label for="email">Correo*</label>
@@ -30,19 +31,3 @@
     </div>
 </div>
 <!-- End presentacion-->
-
-<!-- Start copyrights -->
-<div class="copyrights">
-    <div class="container">
-        <div class="footer-distributed">
-            <div class="footer-left">
-                <p class="footer-links">
-                    <a href="#">Home</a>
-                    <a href="#">Contact</a>
-                </p>
-                <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-            </div>
-        </div>
-    </div><!-- end container -->
-</div>
-<!-- End copyrights -->
