--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,9 +2,10 @@
     <div id="full-width" class="owl-carousel owl-theme home-hero">
         <div class="text-center item slider-01 display-table overlay">
             <div class="display-table-cell">
-                <div class="form-container">
-                    <div class="card col-md-6">
+                <div class="form-container">  
+                    <div class="card col-md-6">                        
                         <div class="card-body">
+                            <p class="title">Mi usuario</p>
                             <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
                                 <div class="form-group ">
                                     <label for="nombres">Nombres*</label>
@@ -25,18 +26,3 @@
         </div>
     </div>
 </div>
-<!-- Start copyrights -->
-<div class="copyrights">
-    <div class="container">
-        <div class="footer-distributed">
-            <div class="footer-left">
-                <p class="footer-links">
-                    <a href="#">Home</a>
-                    <a href="#">Contact</a>
-                </p>
-                <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-            </div>
-        </div>
-    </div><!-- end container -->
-</div>
-<!-- End copyrights -->
