--- a/src/app/components/dating-history/dating-history.component.html
+++ b/src/app/components/dating-history/dating-history.component.html
@@ -1,5 +1,4 @@
 <!-- Start presentacion-->
-
 <div id="home" class="parallax">
     <div id="full-width" class="owl-carousel owl-theme home-hero">
         <div class="text-center item slider-01 display-table overlay">
@@ -7,7 +6,7 @@
                 <div class="form-container">
                     <div class="card col-md-10">
                         <div class="card-body">
-                            <h1 class="h1">Historial de citas</h1>
+                            <p class="title">Historial de citas</p>
                             <table class="table table-dark">
                                 <tr>
                                     <th>idReserva</th>
@@ -35,20 +34,4 @@
     </div>
 </div>
 <!-- End presentacion-->
-<!-- Start copyrights -->
-<div class="copyrights ">
-    <div class="container ">
-        <div class="footer-distributed ">
-            <div class="footer-left ">
-                <p class="footer-links ">
-                    <a href="# ">Home</a>
-                    <a href="# ">Contact</a>
-                </p>
-                <p class="footer-company-name ">All Rights Reserved. &copy; 2018 <a href="# ">StyleBarber</a> Design By : <a href="https://html.design/ ">html design</a></p>
-            </div>
-        </div>
-    </div>
-    <!-- end container -->
-</div>
-<!-- End copyrights -->
 
