--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -9,6 +9,7 @@
     -o-background-size: cover;
 }
 
+
 .title-container {
     height: 10%;
     display: flex;
@@ -17,7 +18,7 @@
 }
 
 .title {
-    color: white;
+    color: black;
     font-family: 'Lobster', cursive;
     font-size: 60px;
 }
