--- a/src/app/components/reserve/reserve.component.html
+++ b/src/app/components/reserve/reserve.component.html
@@ -6,6 +6,7 @@
                 <div class="form-container">
                     <div class="card col-md-6">
                         <div class="card-body">
+                            <p class="title">Reservas</p>
                             <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
                                 <div class="form-group ">
                                     <label for="client">Nombre del cliente*</label>
