Edición pagina de reservas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
                     <!--Para todos los tipos de usuarios-->
                     <li class="nav-item active" *ngIf="currentUser()" ><a class="nav-link" href="/main">Mi usuario</a></li>
                     <!--Para los clientes-->
-                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/reserve">Crear Reservas</a></li>
+                    <li class="nav-item active" *ngIf="currentUser()"><a class="nav-link" href="/reserve">Reservar citas</a></li>
                     <!--Para los clientes-->
                     <li class="nav-item active" *ngIf="validateUserTypeBarber()"><a class="nav-link" href="/dating-history">Historial de citas</a></li>
                     <!--Para todos los tipos de usuarios-->
