--- a/src/app/components/reserve/reserve.component.html
+++ b/src/app/components/reserve/reserve.component.html
@@ -30,7 +30,7 @@
                                         min="2018-06-07T00:00" max="2018-06-14T00:00" formControlName="date" class="form-control">
                                 </div> 
                                 <div class="buttons-container ">
-                                    <button  (click)="reload()" type="submit " class="btn-block btn-dark ">Registrar barbero</button>
+                                    <button  (click)="reload()" type="submit " class="btn-block btn-dark ">Confirmar reserva</button>
                                 </div>                    
                             </form>                            
                         </div>
